--- a/dev/assets/ourwork.pug
+++ b/dev/assets/ourwork.pug
@@ -9,14 +9,10 @@ block content
 			//- projects wrapper
 			.works-list.snj-col-10.offset-1.snj-col-md-8.offset-md-2
 				.wrap-project-wrapper
-					+project-intro("workbranding.html","01", "Branding Design", "","See case", "See case")
-					+project-intro("workstrategy.html", "02","Campaign"," & Social Media Strategy","Lets talk", "See case" )
-					+project-intro("workmanagement.html","03","Content Creation"," & Management", "See case", "See case")
+					+project-intro("workbranding.html","01", "Branding & Design", "","See case Studie", "See case")
+					+project-intro("workstrategy.html", "02","Campaign"," & Social Media Strategy","See case studies", "See case" )
+					+project-intro("workmanagement.html","03","Content Creation"," & Management", "See case studies", "See case")
 					+project-intro("workevent.html","04","Event Curation","", "See case studies","See Case")
-					//- +project-intro("01", "Branding Design", "", "workbranding.html","See case", "See case")
-					//- +project-intro("02", "Campaign ", " & Social Media Strategy","/", "Let’s talk", "See case")
-					//- +project-intro("03", "Content Creation ", " & Management",",", "See case", "See case")
-					//- +project-intro("04", "Event Curation ", " ","/", "See case studies", "See case")
 	a.btn-wrapper.btn-pages(href="javascript:history.back()")
 		span.btn-animate-up
 			+close-icon
