--- a/dev/assets/project-brand-beams.pug
+++ b/dev/assets/project-brand-beams.pug
@@ -14,10 +14,10 @@ block content
 					.snj-row
 						div.especific-item.snj-col-md-2
 							h4 Cliente
-							h5 Puma						
+							h5 High Beams	
 						div.especific-item.offset-md-2.snj-col-md-4
 							h4 Project
-							h5 Social brand building
+							h5 Branding & Design
 						div.especific-item.snj-col-md-2.offset-md-2
 							h4 Year
 							h5 2017
