--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -29,8 +29,8 @@ html(class='no-js')
 		include ../_modules/project-mixin.pug
 		include ../_modules/about-mixin.pug
 		include ../_modules/project-sections.pug
-		include ../_modules/grid-lines.pug
-		//- include ../_modules/grid-lines-full.pug
+		//- include ../_modules/grid-lines.pug
+		include ../_modules/grid-lines-full.pug
 		include ../_modules/arrow-right.pug
 		
 		//- content
