--- a/dev/assets/message.pug
+++ b/dev/assets/message.pug
@@ -35,7 +35,7 @@ block content
 
 					.input-wrapper#check-box
 						label I have read and agreed with privacy policy.
-							input.checkbox(type="checkbox" checked="checked")
+							input.checkbox(type="checkbox")
 							span.checkmark
 				.arrow-container
 					+arrow-right("/", "Send it")
