--- a/dev/scss/views/_message.scss
+++ b/dev/scss/views/_message.scss
@@ -7,136 +7,7 @@
 		width: 100%;
 		margin-bottom: 20px;
 	}
-	// form{
-	// 	width: 100%;
-	// 	padding-left: 11.11%;
-	// 	@media(min-width: 768px){
-	// 		padding-left: calc(33.3333% - -3px);
-	// 	}
-	// }
 }
-// .input-container{
-// 	width: 100%;
-// 	font-size: 12px;
-// 	// height: 33px;
-// 	display: block;
-// 	position: relative;
-// 	@media(min-width: 768px){
-// 		height: 52px;
-// 	}
-// 	&.line-input{
-// 		&:after{
-// 			content: "";
-// 			width: 100%;
-// 			height: 2px;
-// 			position: absolute;
-// 			bottom: 0;
-// 			left: 0;
-// 			background-color: red;
-// 		}
-// 	}
-// 	label{
-// 		position: absolute;
-// 		top: 50%;
-// 		font-family: 'TitlingGothicFB light';
-// 		transform: translateY(-50%);
-
-// 	}
-// 	.input-wrapper{
-// 		width: 100%;
-// 		height: 100%;
-// 		padding: 10px 0;
-// 		font-family: 'TitlingGothicFB light';
-// 		position: relative;
-// 		color:$dark-brown;
-// 		background-color: transparent;
-// 		display: block;
-// 		border: none;
-// 		// border-bottom: solid 2px #ffc268;
-// 		outline-style: none;
-// 		// &::placeholder{
-// 		// 	color:$dark-brown;
-// 		// 	@include transitions-ease(.24s);
-// 		// }
-// 		// &:hover,
-// 		// &:focus{
-// 		// 	color:$cream;
-// 		// 	&::placeholder{
-// 		// 		color:$cream;
-// 		// 	}
-// 		// }
-// 		@media(min-width: 768px){
-// 			padding: 19px 0;
-// 			font-size: 16px;
-// 		}
-// 	}
-// 	// textarea
-// 	textarea{
-// 		resize: none;
-// 		@include transitions-ease(.24s);
-// 		&:focus,
-// 		&.filled{
-// 			height: 120px;
-// 		}
-// 	}
-// 	// active state
-// 	input:hover ~ label{
-// 		color: red;
-// 	}
-// 	input:focus ~ label,
-// 	input:valid ~ label,
-// 	textarea:focus ~ label,
-// 	textarea.filled ~ label{
-// 		top: -20px;
-// 		font-size: 16px;
-// 		color: $brand-blue;
-// 		opacity: 1;	
-// 	}
-// 	// checkbos
-// 	&.check-box{
-// 		position: relative;
-// 		cursor: pointer;
-// 		display: block;
-// 		-webkit-user-select: none;
-// 		-moz-user-select: none;
-// 		-ms-user-select: none;
-// 		user-select: none;
-// 		label{
-// 			padding-left: 20px;
-// 			cursor: pointer;
-// 			border: none;
-// 		}
-// 		input{
-// 			position: absolute;
-// 			opacity: 0;
-// 			cursor: pointer;
-// 			width: 0;
-// 			height: 0;
-// 			margin: 0;
-// 		}
-// 		.checkmark{
-// 			position: absolute;
-// 			border: solid 2px  $dark-brown;
-// 			border-radius: 100%;
-// 			cursor: pointer;
-// 			height: 9px;
-// 			width: 9px;
-// 			top: 50%;
-// 			left: 0px;
-// 			transform: translateY(-50%);
-// 			@include transitions-ease(.4s);
-// 		}
-// 		// &:hover input ~ .checkmark{
-// 		// 	background-color: $dark-brown;
-// 		// }
-// 		input:checked ~ .checkmark{
-// 			background-color: $dark-brown;
-// 		}
-// 	}
-// }
-
-
-// nuevo
 .message-section{
 	height: 100%;
 	background-color: $light-orange;
@@ -206,64 +77,60 @@
 			textarea:focus ~ label.placeholder,
 			textarea.filled ~ label.placeholder{
 				opacity: 0;
-				color: $cream;
 			}
 			input:hover ~ label.placeholder,
 			textarea:hover ~ label.placeholder{
 				color: $cream;
 			}
 			span.bar{
-				width: 100%;
+				width: 0;
 				height: 2px;
 				background-color: $cream;
 				display: block;
 				opacity: .4
 			}
 		}
-		// 	// checkbos
-		&#check-box{
-			padding: 10px 0;
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			label{
-				position: relative;
-				cursor: pointer;
-				display: block;
-				-webkit-user-select: none;
-				-moz-user-select: none;
-				-ms-user-select: none;
-				user-select: none;
-				padding-left: 20px;
-				cursor: pointer;
-			}
-			input.checkbox{
-				position: absolute;
-				opacity: 0;
-				cursor: pointer;
-				width: 0;
-				height: 0;
-				margin: 0;
-			}
-			.checkmark{
-				position: absolute;
-				border: solid 2px  $dark-brown;
-				border-radius: 100%;
-				cursor: pointer;
-				height: 9px;
-				width: 9px;
-				top: 50%;
-				left: 0px;
-				transform: translateY(-50%);
-				@include transitions-ease(.4s);
-			}
-			// &:hover input ~ .checkmark{
-			// 	background-color: $dark-brown;
-			// }
-			input:checked ~ .checkmark{
-				background-color: $dark-brown;
-			}
-		}
+	}
+}
+// 	// checkbos
+.message-section #inputs-container #check-box{
+	padding: 10px 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	label{
+		position: relative;
+		cursor: pointer;
+		display: block;
+		-webkit-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
+		padding-left: 20px;
+		cursor: pointer;
+	}
+	input.checkbox{
+		position: absolute;
+		opacity: 0;
+		cursor: pointer;
+		width: 0;
+		height: 0;
+		margin: 0;
+	}
+	.checkmark{
+		position: absolute;
+		border: solid 2px  $dark-brown;
+		border-radius: 100%;
+		cursor: pointer;
+		height: 9px;
+		width: 9px;
+		top: 50%;
+		left: 0px;
+		transform: translateY(-50%);
+		@include transitions-ease(.4s);
+	}
+	input:checked ~ .checkmark{
+		background-color: $dark-brown;
 	}
 }
 .message-section .arrow-container{
