--- a/dev/assets/project-brand-beams.pug
+++ b/dev/assets/project-brand-beams.pug
@@ -25,7 +25,11 @@ block content
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					h1.project-title High Beams
 					div.paragraph-left
-						p Our philosophy is that creatives, and creative agencies, should create - especially for the sake of it. That’s what led us to imagine what credit cards would look like if they partnered with some of the world’s best streetwear brands. The final designs were eventually featured on Hypebeast. 
+						p High Beams Dubai is the city’s first Run Crew and Sound System. Its membership includes some of Dubai’s top DJs, trainers and creatives. To break away from the mainstream, PUMA encouraged, and entrusted, Jungle Beige to explore the run crew concept/movement found in cities like New York and London. 
+						p The challenge was to build something similar in a transient city that you can’t run in all year long.  Our Creative Director, a High Beams founder, and the agency worked with the crew to make these perceived disadvantages something to remix and celebrate.
+					div.paragraph-right
+						p The crew gets its name from the fact that people in Dubai flash their high beams at you on the highway when you’re driving too slow. Since the crew can’t train all year long, they also have a weekly circuit training session they refer to as Saturday Brunch - brunches being another “Dubai thing”.
+						p Finally, with crew members from all over the world, with different backgrounds, languages, etc., the ethos of the crew is Vibes First. Because if the vibes are right, people can definitely connect, train and party together. 
 			.p-photo1
 				img(src="../img/project-img-1.jpg", alt="")
 			.img-wrapper
