--- a/dev/assets/project-manage-puma.pug
+++ b/dev/assets/project-manage-puma.pug
@@ -25,8 +25,11 @@ block content
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					h1.project-title Puma
 					div.paragraph-left
-						p We worked with PUMA Middle East to create the brand’s first non-global Instagram account, and have managed it completely (strategy, content production and community management) since day one. 
-						p The success of the account has led to similar local accounts around the world, from India to South Africa. 
+						p We worked with PUMA Middle East to create the brand’s first non-global Instagram account: <a (href="")>@pumame</a>. 
+						p It was an opportunity we had to pitch internally to PUMA global, and came with significant risks. Basically, if we messed up, we mess up the opportunity for every other country/region in the world that want their own IG account.
+					div.paragraph-right
+						p Thankfully, we did the opposite and he success of the account has led to several local accounts around the world, from India to South Africa. 
+						p We manage the <a (href="")>@pumame </a> account completely: strategy, content production, community management and reporting. In just a few years, the account reach over 100k followers and continues to “put on” for the region’s own talent, from photographers to musicians. 
 
 
 			.p-photo1
