--- a/dev/assets/project-social-power.pug
+++ b/dev/assets/project-social-power.pug
@@ -24,9 +24,11 @@ block content
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					h1.project-title Power Horse
 					div.paragraph-left
-						p When Power Horse was ready to distinguish itself from competitors and focus heavily on the pervading lifestyle cultures and movements of the day (namely street culture), we connected the brand with artists and creatives in the community that truly espoused the brand’s “Unstoppable You” spirit.
+						p When Power Horse was ready to distinguish itself from competitors and focus heavily on the pervading lifestyle cultures and movements of the day (namely street culture), we connected the brand with artists and creatives in the community that truly espoused the brand’s “Unstoppable You” spirit. Not the easiest job for a brand that virtually had no reputation with this community.
+						p But we know it’s always about “show and prove” so we made sure that our initial collaborations were about actually helping artists/athletes in the  
 					div.paragraph-right
-						p Once their intention and place in the community was set, we then moved on to establishing a new design language and tone of voice. So while their competitors went extreme, we went more creative (even artsy). When competitors went mainstream, we went underground. 
+						p community clearly get to the next level, whether it was providing the resources (and narrative) to have their booth come to life at Sole DXB, from helping them tick something off their creative bucket list. Once their intention and place in the community was set, we then moved on to establishing a new design language and tone of voice. 
+						p So while their competitors went extreme, we went more creative (even artsy). When competitors went mainstream, we went underground. 
 			.p-photo1
 				img(src="../img/project-img-1.jpg", alt="")
 			.img-wrapper
