--- a/dev/assets/project-social-suede.pug
+++ b/dev/assets/project-social-suede.pug
@@ -24,7 +24,11 @@ block content
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					h1.project-title Suede Guerrilla
 					div.paragraph-left
-						p For PUMA’s Run the Streets campaign, we created the Suede Guerrillas, a group of artists and creatives from different walks of life that authentically embodied the campaign’s ethos. It was the first long-term micro influencer campaign to exist in the region, and produced plenty of original content and activations. In Year 2, the Suede Guerrillas evolved into a regional platform for co-creation anchored by its site, suedeguerrillas.com, which we also designed. 
+						p For PUMA’s Run the Streets campaign, we created the Suede Guerrillas, a group of artists and creatives from different walks of life that authentically embodied the campaign’s ethos. 
+						p It was the first long-term micro influencer campaign to exist in the region, and produced and unprecedented amount of original content and activations - a sort of digital interpretation of running the streets. In Year 2, the Suede Guerrillas evolved into a regional platform for co-creation anchored by its site, <a (href="")>suedeguerrillas.com</a>, which we also designed.
+					div.paragraph-right
+						p  We’re especially proud of the platform because it’s exactly the type of thing that wasn’t available to use as young, ambitious creatives. 
+						p Now an entire region of artists/creatives have a way to continually share ideas and work with the brand. It’s already led to dozens of co-creations and will continue to do so while the site is live. It’s the type of access and opportunity our younger selves dreamed of, and we’re proud to pay it forward to this generation and beyond.  
 
 			.p-photo1
 				img(src="../img/project-img-1.jpg", alt="")
