--- a/dev/scss/views/_project-page.scss
+++ b/dev/scss/views/_project-page.scss
@@ -159,6 +159,10 @@ section.project-description{
 			margin-bottom: 50px;
 			width: 50%;
 		}
+		a{
+			color: $cream;
+			cursor: pointer;
+		}
 		div{
 			width: 50%;
 			display: inline-block;
