--- a/dev/assets/project-brand-cred.pug
+++ b/dev/assets/project-brand-cred.pug
@@ -25,8 +25,11 @@ block content
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					h1.project-title Future Street Cred
 					div.paragraph-left
-						p Our philosophy is that creatives, and creative agencies, should create - especially for the sake of it. 
-						p That’s what led us to imagine what credit cards would look like if they partnered with some of the world’s best streetwear brands. The final designs were eventually featured on Hypebeast. 
+						p At Jungle Beige, our philosophy is that creatives, and creative agencies, should also create simply for the sake of it. We love our client collaborations, but there are often projects that can only exist on its own, without a particular brand or company associated with it. It’s just expression. 
+						p It’s just art. And most importantly, it’s enjoyable. It’s this type of spirit that led us to imagine what credit cards would look like if they partnered with some of the world’s best streetwear brands. 
+					div.paragraph-right
+						p The final designs were eventually featured on Hypebae. Have we seen a streetwear brand and credit card company join forces yet? No, but maybe streetwear or sneaker cryptocurrency will actually be the next thing.
+						p What we’ll certainly continue doing is creating anything, whether it’s one thing or an entire series, simply because we feel it should exist in the world. 
 
 			.p-photo1
 				img(src="../img/project-img-1.jpg", alt="")
