Tweaks to improve interaction and pixel perfect.

--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -32,6 +32,10 @@ html(class='no-js')
 		//- include ../_modules/grid-lines.pug
 		include ../_modules/grid-lines-full.pug
 		include ../_modules/arrow-right.pug
+
+		//- tester
+		.img-tester
+			img(src="img/home_desk.jpg", alt="")
 		
 		//- content
 		#main-wrapper
