--- a/dev/assets/message.pug
+++ b/dev/assets/message.pug
@@ -34,7 +34,7 @@ block content
 						span.bar
 
 					.input-wrapper#check-box
-						label I have read and agreed with privacy policy.
+						label.policy I have read and agreed with privacy policy.
 							input.checkbox(type="checkbox")
 							span.checkmark
 				.arrow-container
