--- a/dev/assets/workbranding.pug
+++ b/dev/assets/workbranding.pug
@@ -10,6 +10,8 @@ block content
 			+project-sections("Branding & Design", "High Beams", "01", "project-brand-beams.html")
 		.sections-p-wrapper.project-bg-2
 			+project-sections("Branding & Design", "Future Street Cred", "02", "project-brand-cred.html")
+		.sections-p-wrapper.project-bg-2
+			+project-sections("Branding & Design", "Future Street Cred", "02", "project-brand-cred.html")
 	a.btn-wrapper.btn-pages(href="ourwork.html")
 		span.btn-animate-up
 			+back-icon-btn
