--- a/dev/scss/app.scss
+++ b/dev/scss/app.scss
@@ -32,3 +32,18 @@
 @import 'modules/_grid-lines-full';
 @import 'modules/_slider';
 @import 'modules/_preloader';
+
+.img-tester{
+	opacity: 0;
+
+	pointer-events: none;
+	z-index: 1;
+	position: absolute;
+	top: 0; left: 0;
+	width: 100%;
+	height: 100%;
+
+	img{
+		width: 100%;
+	}
+}
