--- a/dev/scss/views/_message.scss
+++ b/dev/scss/views/_message.scss
@@ -62,6 +62,14 @@
 				@media(min-width: 768px){
 					font-size: 16px;
 				}
+
+				&.policy{
+					font-size: 10px;
+					
+					@media(min-width: 768px){
+						font-size: 12px;
+					}
+				}
 			}
 			textarea{
 				resize: none;
